--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/ywen26/Employee-Tracker/issues"
   },
-  "homepage": "https://github.com/ywen26/Employee-Tracker#readme"
+  "homepage": "https://github.com/ywen26/Employee-Tracker#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "inquirer": "^7.3.3",
+    "mysql": "^2.18.1"
+  }
 }
